wb-cloud-agent (1.6.1) stable; urgency=medium

  * Added ability to remove controller from cloud when provider is deleted

 -- Arseniy Astafev <arseniy.astafev@wirenboard.com>  Thu, 10 Jul 2025 19:00:00 +0300

wb-cloud-agent (1.6.0) stable; urgency=medium

  * Remove `--provider` flag and `--broker` flag and positional parameter `agent url` from "add-provider" subcmd
  * Add `--name` flag to "add-provider" subcmd for override provider name from hostname in base url
  * Add "use-on-premise" and "del-provider" and "del-all-providers" subcmds
  * Add "run-daemon" subcmd with provider name positional arg and `--broker` flag
  * Add table report about existing providers for command "wb-cloud-agent"

 -- Arseniy Astafev <arseniy.astafev@wirenboard.com>  Wed, 03 Jul 2025 12:00:00 +0300

wb-cloud-agent (1.5.14) stable; urgency=medium

  * Add more explicit error message on invalid certs (possibly because of wrong CPU board)

 -- Vladimir Romanov <v.romanov@wirenboard.com>  Thu, 10 Apr 2025 13:58:22 +0300

wb-cloud-agent (1.5.13) stable; urgency=medium

  * Fix frpc service description

 -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Thu, 27 Feb 2025 19:10:00 +0400

wb-cloud-agent (1.5.12) stable; urgency=medium

  * Wait until the network is "up"
  * Don't fail if no mqtt connection
  * Fix virtual device title

 -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Thu, 05 Dec 2024 15:30:00 +0400

wb-cloud-agent (1.5.11) stable; urgency=medium

  * Restart alternative cloud services when main agent is restarting

 -- Nikita Chernykh <nikita.chernykh@wirenboard.com>  Mon, 07 Oct 2024 10:00:00 +0300

wb-cloud-agent (1.5.10) stable; urgency=medium

  * Enable anrgy pylint. No functional changes

 -- Ekaterina Volkova <ekaterina.volkova@wirenboard.com>  Wed, 09 Oct 2024 13:59:09 +0300

wb-cloud-agent (1.5.9) stable; urgency=medium

  * Add mqtt device republish on mosquitto restart
