@@ -1,6 +1,7 @@
 wb-cloud-agent (1.6.1) stable; urgency=medium
 
-  * Added ability to remove controller from cloud when provider is deleted
+  * Add ability to remove controller from cloud when provider is deleted
+  * Add subcmd cloud-unbind for remove controller from cloud
 
  -- Arseniy Astafev <arseniy.astafev@wirenboard.com>  Thu, 10 Jul 2025 19:00:00 +0300
 
